--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "bootstrap": "^4.6.1",
     "core-js": "^2.6.5",
+    "jquery": "^3.6.0",
+    "popper": "^1.0.1",
+    "popper.js": "^1.16.1",
+    "vee-validate": "^3.4.14",
     "vue": "^2.6.10",
+    "vue-axios": "^3.4.1",
+    "vue-loading-overlay": "^3.4.2",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
