--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.10",
     "vue-axios": "^3.4.1",
     "vue-loading-overlay": "^3.4.2",
+    "vue-piczoom": "^1.0.6",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
