--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "animate.css": "^4.1.1",
     "axios": "^0.26.1",
     "bootstrap": "^4.6.1",
     "core-js": "^2.6.5",
@@ -18,6 +17,7 @@
     "vee-validate": "^3.4.14",
     "vue": "^2.6.10",
     "vue-axios": "^3.4.1",
+    "vue-carousel": "^0.18.0",
     "vue-loading-overlay": "^3.4.2",
     "vue-piczoom": "^1.0.6",
     "vue-router": "^3.0.3",
