--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "axios": "^0.26.1",
     "bootstrap": "^4.6.1",
     "core-js": "^2.6.5",
