--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-axios": "^3.4.1",
     "vue-carousel": "^0.18.0",
     "vue-loading-overlay": "^3.4.2",
+    "vue-meta": "^2.4.0",
     "vue-piczoom": "^1.0.6",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
